@@ -1,6 +1,11 @@
 2013-05-12 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sim/ucsim/stm8.src/inst.cc:
+	  STM8: Fix clr, partially by patch by Valentin Dudouyt.
+
+2013-05-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sim/ucsim/stm8.src/inst.cc:
 	  STM8: Patch by Valentin Dudouyt to fix ldw.
 	* src/stm8/main.c:
 	  STM8: Patches by Valentin Dudouyt to fix handling of global variables and startup.
